fix overflow

--- a/src/sass/_hero-getstart.scss
+++ b/src/sass/_hero-getstart.scss
@@ -43,7 +43,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 1.14;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 .get-started-btn {
